baize/mln/parser/antlr/impl/MLNParser.py
# Generated from MLN.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MLNParser ( Parser ):

    grammarFileName = "MLN.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "','", "')'", "'@'", "':'", "'v'", 
                     "<INVALID>", "<INVALID>", "'!'", "'+'", "'-'", "'*'", 
                     "'.'", "<INVALID>", "'=>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WS", "COMMENT", 
                      "NOT", "PLUS", "MINUS", "ASTERISK", "PERIOD", "EXIST", 
                      "IMPLIES", "STRING", "NUMBER", "ID" ]

    RULE_definitions = 0
    RULE_schemaList = 1
    RULE_schema = 2
    RULE_predArg = 3
    RULE_ruleList = 4
    RULE_mlnRule = 5
    RULE_softRule = 6
    RULE_hardRule = 7
    RULE_foclause = 8
    RULE_existQuan = 9
    RULE_literal = 10
    RULE_term = 11
    RULE_atom = 12
    RULE_queryList = 13
    RULE_query = 14
    RULE_evidenceList = 15
    RULE_evidence = 16

    ruleNames =  [ "definitions", "schemaList", "schema", "predArg", "ruleList", 
                   "mlnRule", "softRule", "hardRule", "foclause", "existQuan", 
                   "literal", "term", "atom", "queryList", "query", "evidenceList", 
                   "evidence" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    WS=7
    COMMENT=8
    NOT=9
    PLUS=10
    MINUS=11
    ASTERISK=12
    PERIOD=13
    EXIST=14
    IMPLIES=15
    STRING=16
    NUMBER=17
    ID=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DefinitionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def schemaList(self):
            return self.getTypedRuleContext(MLNParser.SchemaListContext,0)


        def ruleList(self):
            return self.getTypedRuleContext(MLNParser.RuleListContext,0)


        def EOF(self):
            return self.getToken(MLNParser.EOF, 0)

        def getRuleIndex(self):
            return MLNParser.RULE_definitions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinitions" ):
                listener.enterDefinitions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinitions" ):
                listener.exitDefinitions(self)




    def definitions(self):

        localctx = MLNParser.DefinitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_definitions)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.schemaList()
            self.state = 35
            self.ruleList()
            self.state = 36
            self.match(MLNParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SchemaListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def schema(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLNParser.SchemaContext)
            else:
                return self.getTypedRuleContext(MLNParser.SchemaContext,i)


        def getRuleIndex(self):
            return MLNParser.RULE_schemaList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSchemaList" ):
                listener.enterSchemaList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSchemaList" ):
                listener.exitSchemaList(self)




    def schemaList(self):

        localctx = MLNParser.SchemaListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_schemaList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 38
                    self.schema() 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SchemaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a1 = None # Token
            self.pname = None # Token
            self._predArg = None # PredArgContext
            self.types = list() # of PredArgContexts

        def ID(self):
            return self.getToken(MLNParser.ID, 0)

        def predArg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLNParser.PredArgContext)
            else:
                return self.getTypedRuleContext(MLNParser.PredArgContext,i)


        def ASTERISK(self):
            return self.getToken(MLNParser.ASTERISK, 0)

        def getRuleIndex(self):
            return MLNParser.RULE_schema

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSchema" ):
                listener.enterSchema(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSchema" ):
                listener.exitSchema(self)




    def schema(self):

        localctx = MLNParser.SchemaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_schema)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MLNParser.ASTERISK:
                self.state = 44
                localctx.a1 = self.match(MLNParser.ASTERISK)


            self.state = 47
            localctx.pname = self.match(MLNParser.ID)
            self.state = 48
            self.match(MLNParser.T__0)
            self.state = 49
            localctx._predArg = self.predArg()
            localctx.types.append(localctx._predArg)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MLNParser.T__1:
                self.state = 50
                self.match(MLNParser.T__1)
                self.state = 51
                localctx._predArg = self.predArg()
                localctx.types.append(localctx._predArg)
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(MLNParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None # Token
            self.name = None # Token
            self.uni = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MLNParser.ID)
            else:
                return self.getToken(MLNParser.ID, i)

        def NOT(self):
            return self.getToken(MLNParser.NOT, 0)

        def getRuleIndex(self):
            return MLNParser.RULE_predArg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredArg" ):
                listener.enterPredArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredArg" ):
                listener.exitPredArg(self)




    def predArg(self):

        localctx = MLNParser.PredArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_predArg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            localctx.type_ = self.match(MLNParser.ID)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MLNParser.ID:
                self.state = 60
                localctx.name = self.match(MLNParser.ID)


            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MLNParser.NOT:
                self.state = 63
                localctx.uni = self.match(MLNParser.NOT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mlnRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLNParser.MlnRuleContext)
            else:
                return self.getTypedRuleContext(MLNParser.MlnRuleContext,i)


        def getRuleIndex(self):
            return MLNParser.RULE_ruleList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleList" ):
                listener.enterRuleList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleList" ):
                listener.exitRuleList(self)




    def ruleList(self):

        localctx = MLNParser.RuleListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ruleList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MLNParser.T__3) | (1 << MLNParser.NOT) | (1 << MLNParser.PLUS) | (1 << MLNParser.EXIST) | (1 << MLNParser.NUMBER) | (1 << MLNParser.ID))) != 0):
                self.state = 66
                self.mlnRule()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MlnRuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def softRule(self):
            return self.getTypedRuleContext(MLNParser.SoftRuleContext,0)


        def hardRule(self):
            return self.getTypedRuleContext(MLNParser.HardRuleContext,0)


        def getRuleIndex(self):
            return MLNParser.RULE_mlnRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMlnRule" ):
                listener.enterMlnRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMlnRule" ):
                listener.exitMlnRule(self)




    def mlnRule(self):

        localctx = MLNParser.MlnRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mlnRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 72
                self.softRule()
                pass

            elif la_ == 2:
                self.state = 73
                self.hardRule()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SoftRuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.du = None # Token
            self.weight = None # Token
            self.fc = None # FoclauseContext
            self.warg = None # Token

        def NUMBER(self):
            return self.getToken(MLNParser.NUMBER, 0)

        def foclause(self):
            return self.getTypedRuleContext(MLNParser.FoclauseContext,0)


        def ID(self):
            return self.getToken(MLNParser.ID, 0)

        def getRuleIndex(self):
            return MLNParser.RULE_softRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSoftRule" ):
                listener.enterSoftRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSoftRule" ):
                listener.exitSoftRule(self)




    def softRule(self):

        localctx = MLNParser.SoftRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_softRule)
        self._la = 0 # Token type
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MLNParser.T__3:
                    self.state = 76
                    localctx.du = self.match(MLNParser.T__3)


                self.state = 79
                localctx.weight = self.match(MLNParser.NUMBER)
                self.state = 80
                localctx.fc = self.foclause()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MLNParser.T__3:
                    self.state = 81
                    localctx.du = self.match(MLNParser.T__3)


                self.state = 84
                localctx.warg = self.match(MLNParser.ID)
                self.state = 85
                self.match(MLNParser.T__4)
                self.state = 86
                localctx.fc = self.foclause()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HardRuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.fc = None # FoclauseContext

        def PERIOD(self):
            return self.getToken(MLNParser.PERIOD, 0)

        def foclause(self):
            return self.getTypedRuleContext(MLNParser.FoclauseContext,0)


        def getRuleIndex(self):
            return MLNParser.RULE_hardRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHardRule" ):
                listener.enterHardRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHardRule" ):
                listener.exitHardRule(self)




    def hardRule(self):

        localctx = MLNParser.HardRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_hardRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            localctx.fc = self.foclause()
            self.state = 90
            self.match(MLNParser.PERIOD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FoclauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.exq = None # ExistQuanContext
            self._literal = None # LiteralContext
            self.ants = list() # of LiteralContexts
            self.lits = list() # of LiteralContexts

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLNParser.LiteralContext)
            else:
                return self.getTypedRuleContext(MLNParser.LiteralContext,i)


        def IMPLIES(self):
            return self.getToken(MLNParser.IMPLIES, 0)

        def existQuan(self):
            return self.getTypedRuleContext(MLNParser.ExistQuanContext,0)


        def getRuleIndex(self):
            return MLNParser.RULE_foclause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFoclause" ):
                listener.enterFoclause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFoclause" ):
                listener.exitFoclause(self)




    def foclause(self):

        localctx = MLNParser.FoclauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_foclause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MLNParser.EXIST:
                self.state = 92
                localctx.exq = self.existQuan()


            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 95
                localctx._literal = self.literal()
                localctx.ants.append(localctx._literal)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MLNParser.T__1:
                    self.state = 96
                    self.match(MLNParser.T__1)
                    self.state = 97
                    localctx._literal = self.literal()
                    localctx.ants.append(localctx._literal)
                    self.state = 102
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 103
                self.match(MLNParser.IMPLIES)


            self.state = 107
            localctx._literal = self.literal()
            localctx.lits.append(localctx._literal)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MLNParser.T__5:
                self.state = 108
                self.match(MLNParser.T__5)
                self.state = 109
                localctx._literal = self.literal()
                localctx.lits.append(localctx._literal)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExistQuanContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token
            self.vs = list() # of Tokens

        def EXIST(self):
            return self.getToken(MLNParser.EXIST, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MLNParser.ID)
            else:
                return self.getToken(MLNParser.ID, i)

        def getRuleIndex(self):
            return MLNParser.RULE_existQuan

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExistQuan" ):
                listener.enterExistQuan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExistQuan" ):
                listener.exitExistQuan(self)




    def existQuan(self):

        localctx = MLNParser.ExistQuanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_existQuan)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(MLNParser.EXIST)
            self.state = 116
            localctx._ID = self.match(MLNParser.ID)
            localctx.vs.append(localctx._ID)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MLNParser.T__1:
                self.state = 117
                self.match(MLNParser.T__1)
                self.state = 118
                localctx._ID = self.match(MLNParser.ID)
                localctx.vs.append(localctx._ID)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.pref = None # Token
            self.a = None # AtomContext

        def atom(self):
            return self.getTypedRuleContext(MLNParser.AtomContext,0)


        def PLUS(self):
            return self.getToken(MLNParser.PLUS, 0)

        def NOT(self):
            return self.getToken(MLNParser.NOT, 0)

        def getRuleIndex(self):
            return MLNParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = MLNParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MLNParser.NOT or _la==MLNParser.PLUS:
                self.state = 124
                localctx.pref = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==MLNParser.NOT or _la==MLNParser.PLUS):
                    localctx.pref = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 127
            localctx.a = self.atom()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.x = None # Token
            self.d = None # Token

        def ID(self):
            return self.getToken(MLNParser.ID, 0)

        def NUMBER(self):
            return self.getToken(MLNParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(MLNParser.STRING, 0)

        def getRuleIndex(self):
            return MLNParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = MLNParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MLNParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                localctx.x = self.match(MLNParser.ID)
                pass
            elif token in [MLNParser.STRING, MLNParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                localctx.d = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==MLNParser.STRING or _la==MLNParser.NUMBER):
                    localctx.d = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.pred = None # Token
            self._term = None # TermContext
            self.terms = list() # of TermContexts

        def ID(self):
            return self.getToken(MLNParser.ID, 0)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLNParser.TermContext)
            else:
                return self.getTypedRuleContext(MLNParser.TermContext,i)


        def getRuleIndex(self):
            return MLNParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)




    def atom(self):

        localctx = MLNParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_atom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            localctx.pred = self.match(MLNParser.ID)
            self.state = 134
            self.match(MLNParser.T__0)
            self.state = 135
            localctx._term = self.term()
            localctx.terms.append(localctx._term)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MLNParser.T__1:
                self.state = 136
                self.match(MLNParser.T__1)
                self.state = 137
                localctx._term = self.term()
                localctx.terms.append(localctx._term)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 143
            self.match(MLNParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MLNParser.EOF, 0)

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLNParser.QueryContext)
            else:
                return self.getTypedRuleContext(MLNParser.QueryContext,i)


        def getRuleIndex(self):
            return MLNParser.RULE_queryList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryList" ):
                listener.enterQueryList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryList" ):
                listener.exitQueryList(self)




    def queryList(self):

        localctx = MLNParser.QueryListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_queryList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 145
                self.query()
                self.state = 148 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MLNParser.ID):
                    break

            self.state = 150
            self.match(MLNParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a = None # AtomContext

        def atom(self):
            return self.getTypedRuleContext(MLNParser.AtomContext,0)


        def getRuleIndex(self):
            return MLNParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = MLNParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            localctx.a = self.atom()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EvidenceListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MLNParser.EOF, 0)

        def evidence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MLNParser.EvidenceContext)
            else:
                return self.getTypedRuleContext(MLNParser.EvidenceContext,i)


        def getRuleIndex(self):
            return MLNParser.RULE_evidenceList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvidenceList" ):
                listener.enterEvidenceList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvidenceList" ):
                listener.exitEvidenceList(self)




    def evidenceList(self):

        localctx = MLNParser.EvidenceListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_evidenceList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 154
                self.evidence()
                self.state = 157 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MLNParser.NOT) | (1 << MLNParser.NUMBER) | (1 << MLNParser.ID))) != 0)):
                    break

            self.state = 159
            self.match(MLNParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EvidenceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.prior = None # Token
            self.perf = None # Token
            self.a = None # AtomContext

        def atom(self):
            return self.getTypedRuleContext(MLNParser.AtomContext,0)


        def NUMBER(self):
            return self.getToken(MLNParser.NUMBER, 0)

        def NOT(self):
            return self.getToken(MLNParser.NOT, 0)

        def getRuleIndex(self):
            return MLNParser.RULE_evidence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvidence" ):
                listener.enterEvidence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvidence" ):
                listener.exitEvidence(self)




    def evidence(self):

        localctx = MLNParser.EvidenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_evidence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MLNParser.NUMBER:
                self.state = 161
                localctx.prior = self.match(MLNParser.NUMBER)


            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MLNParser.NOT:
                self.state = 164
                localctx.perf = self.match(MLNParser.NOT)


            self.state = 167
            localctx.a = self.atom()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





